# codevault

./: .env  .env.example  .gitignore  .mcp.json  CLAUDE.md  DOCKER_README.md  Dockerfile  FORK_CHANGES.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN.md  POSTGRES_AS_SERVICE.md  QUICKSTART.md  README.md  SETUP_MULTIUSER.md  USAGE_GUIDE.md  config.yaml.example  docker-compose.yml  init-db.sql  last_state.md  pgadmin-servers.json  pyproject.toml
.claude/agents/: architect.md  developer.md  reviewer.md  tester.md
.claude/skills/codevault/: SKILL.md
skills/codevault/: SKILL.md
src/memory/: bundles.py  cli.py  config.py  core.py  db.py  db_pg.py  health.py  installer.py  markdown.py  mcp_handlers.py  mcp_server.py  mcp_server_sse.py  models.py  search.py  setup.py
starter-kit/: README.md  claudemd-snippet.md  settings-template.json
starter-kit/hooks/: log-memory-op.sh  log-prompt.sh  log-tool-use.sh  on-commit.sh  session-start.sh  session-stop.sh
starter-kit/skills/memory-agent/: SKILL.md
tests/: test_cli.py  test_db_pg.py  test_markdown.py  test_mcp_server.py  test_models.py  test_setup.py
